Modified the 'contact us' page

--- a/app/views/static/open_source.html.haml
+++ b/app/views/static/open_source.html.haml
@@ -4,7 +4,7 @@
     .col-lg-2
       .blog-side-item
         .category
-          %h3 Latest Projects
+          %h3 Projects
           %ul.list-unstyled
             - @open_sources.each do |open_source|
               %li
