--- a/app/views/static/contact_us.html.haml
+++ b/app/views/static/contact_us.html.haml
@@ -3,74 +3,55 @@
   #map-canvas{:style => "width: 100%; height: 400px"}
 .container
   .row
-    .col-lg-5.col-sm-5.address
-      %h4 Pune
-      %p
-        Josh Software.
-        %br/
-        Street Address: 6, Thube Park, Shivajinagar, Pune.
-        %br/
-        Pune - 411005.
-      %br/
-      %br/
-      %br/
-      %p
-        Phone
-        %br/
-        %span.muted +91-20-25539995
-        %br/
-        Fax
-        %br/
-        %span.muted 111-222-333.
-        %br/
-        Email
-        %br/
-        %span.muted info@joshsoftware.com
-    .col-lg-7.col-sm-7.address
+    .contact-form
       %h4 Send a Message
-      .contact-form
-        %form{:action => 'https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8', :method => 'POST', :id => 'contact_form', role: 'form'}
-          %input{:type => 'hidden', :name => 'oid', :value => '00D90000000I0gJ'}
-          %input{:type => 'hidden', :name => 'retURL', :value => 'http://www.joshsoftware.com/ThankYou'}
-          %input{:type => 'hidden', :name => 'lead_source', :id => 'ld_ource', :value => 'Web'}
-          %input{:type => 'hidden', :name => 'sfga', :value => '00D90000000I0gJ'}
-          .form-group
-            %label{:for => 'first_name'}First Name
-            %input#first_name.form-control{:id => 'first_name', :name => 'first_name', :type => 'text'}
-          .form-group
-            %label{:for => 'last_name'}Last Name
-            %input#last_name.form-control{:name => 'last_name', :type => 'text'}
-          .form-group
-            %label{:for => 'email'}Email
-            %input#email.form-control{:name => 'email', :type => 'text'}
-          .form-group
-            %label{:for => 'title'}Title
-            %input#title.form-control{:name => 'title', :type => 'text'}
-          .form-group
-            %label{:for => 'skype_id__c'}Skype Handle
-            %input#skype_id__c.form-control{:name => 'skype_id__c', :type => 'text'}
-          .form-group
-            %label{:for => 'phone'}Phone
-            %input#phone.form-control{:name => 'phone', :type => 'text'}
-          .form-group
-            %label{:for => 'address'}Address
-            %textarea#address.form-control{:name => 'address', :rows => "5", :cols => "20"}
-          .form-group
-            %label{:for => 'company'}Company
-            %input#company.form-control{:id => 'city', :name => 'city', :type => 'text'}
-          .form-group
-            %label{:for => 'city'}City
-            %input#city.form-control{:name => 'city', :type => 'text'}
-          .form-group
-            %label{:for => 'state'}State/Province
-            %input#stt.form-control{:name => 'state', :type => 'text'}
-          .form-group
-            %label{:for => 'country'}Country
-            %input#country.form-control{:name => 'country', :type => 'text'}
-          .form-group
-            %label{:for => 'description'}Description
-            %textarea#description.form-control{:name => 'description', :rows => "5", :cols => "45" }
-          %button.btn.btn-danger{:type => "submit"} Submit
+      %form{action: 'https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8', method: 'POST', id: 'contact_form', role: 'form'}
+        .row
+          .col-lg-6
+            %input{:type => 'hidden', :name => 'oid', :value => '00D90000000I0gJ'}
+            %input{:type => 'hidden', :name => 'retURL', :value => 'http://www.joshsoftware.com/ThankYou'}
+            %input{:type => 'hidden', :name => 'lead_source', :id => 'ld_ource', :value => 'Web'}
+            %input{:type => 'hidden', :name => 'sfga', :value => '00D90000000I0gJ'}
+            .form-group
+              %label{:for => 'first_name'}First Name
+              %input#first_name.form-control{:id => 'first_name', :name => 'first_name', :type => 'text'}
+            .form-group
+              %label{:for => 'last_name'}Last Name
+              %input#last_name.form-control{:name => 'last_name', :type => 'text'}
+            .form-group
+              %label{:for => 'email'}Email
+              %input#email.form-control{:name => 'email', :type => 'text'}
+            .form-group
+              %label{:for => 'title'}Title
+              %input#title.form-control{:name => 'title', :type => 'text'}
+            .form-group
+              %label{:for => 'phone'}Phone
+              %input#phone.form-control{:name => 'phone', :type => 'text'}
+            .form-group
+              %label{:for => 'address'}Address
+              %textarea#address.form-control{:name => 'address', :rows => "5", :cols => "20"}
+          .col-lg-6
+            .form-group
+              %label{:for => 'skype_id__c'}Skype Handle
+              %input#skype_id__c.form-control{:name => 'skype_id__c', :type => 'text'}
+            .form-group
+              %label{:for => 'company'}Company
+              %input#company.form-control{:id => 'city', :name => 'city', :type => 'text'}
+            .form-group
+              %label{:for => 'city'}City
+              %input#city.form-control{:name => 'city', :type => 'text'}
+            .form-group
+              %label{:for => 'state'}State/Province
+              %input#stt.form-control{:name => 'state', :type => 'text'}
+            .form-group
+              %label{:for => 'country'}Country
+              %input#country.form-control{:name => 'country', :type => 'text'}
+            .form-group
+              %label{:for => 'description'}Description
+              %textarea#description.form-control{:name => 'description', :rows => "5", :cols => "45" }
+        .row
+          .col-lg-6.col-md-offset-5
+            %button.btn.btn-danger.btn-lg{:type => "submit"} Submit
 = javascript_include_tag 'https://lct.salesforce.com/sfga.js'
 %script{:src => "https://maps.googleapis.com/maps/api/js?v=3.exp&AMP;sensor=false"}
 = javascript_include_tag 'others/common-scripts.js'
