Added Josh logo Removed some members from team Modified view

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -4,14 +4,13 @@
       .col-lg-3.col-sm-3
         %h1 contact info
         %address
-          %p Address: 6, Thube Park,
-          %p Shivajinagar, Pune - 411005,
-          %p Maharashtra, India,
-          %p Phone : +91 - 20 - 25539995
+          %p Address: 6, Thube Park, Shivajinagar, 
+          %p Pune - 411005, Maharashtra, India,
+          %p Phone: +91 - 20 - 25539995
           %p
-            Email :
+            Email:
             %a{:href => "javascript:;"} info@joshsoftware.com
-      .col-lg-5.col-sm-5
+      .col-lg-6.col-sm-6
         %h1 latest tweet
         .tweet-box
           %i.icon-twitter
@@ -20,7 +19,7 @@
             %a{:href => "javascript:;"} @joshsoftware
             for all future updates of us!
             %a{:href => "javascript:;"} twitter.com/joshsoftware
-      .col-lg-3.col-sm-3.col-lg-offset-1
+      .col-lg-3.col-sm-3 
         %h1 stay connected
         %ul.social-link-footer.list-unstyled
           %li
