--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -7,8 +7,7 @@
           %span.icon-bar
           %span.icon-bar
         %a.navbar-brand{:href => root_path}
-          Josh
-          %span Software
+          = image_tag 'JOSHSoftware_LogoStack_1252px.png'
       .navbar-collapse.collapse
         %ul.nav.navbar-nav
           %li{class: "#{check_if_active('home')}"}
