--- a/app/views/static/open_source.html.haml
+++ b/app/views/static/open_source.html.haml
@@ -1,4 +1,3 @@
-= render partial: 'shared/breadcrumbs', locals: {data: 'Open Source'}
 .container
   .row
     .col-lg-2
@@ -26,5 +25,6 @@
                   %a{:href => open_source[:url], :target => "_blank"}= raw open_source[:title]
                 - else
                   = open_source[:title]
-              %p 
-                = raw open_source[:details]
+              %blockquote
+                %p 
+                  = raw open_source[:details]
