--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -6,12 +6,12 @@
           .carousel-inner
             .item.active
               %a{:href => "http://www.packtpub.com/ruby-and-mongodb-web-development-beginners-guide/book", :target => "_blank"}
-                %img{:src => "assets/ruby_and_mongo_db_book.png", :alt => "Ruby and MongoDB Web Development"}
+                =image_tag "ruby_and_mongo_db_book.png", :alt => "Ruby and MongoDB Web Development"
                 .carousel-caption
                   %p Books by us
             .item
               %a{:href => "http://www.packtpub.com/ruby-and-mongodb-web-development-beginners-guide/book", :target => "_blank"}
-                %img{:src => "assets/ruby_and_mongo_db_book.png", :alt => "Ruby and MongoDB Web Development"}
+                =image_tag "ruby_and_mongo_db_book.png", :alt => "Ruby and MongoDB Web Development"
                 .carousel-caption
                   %p Books by us
           %a.carousel-control.left{"data-slide" => "prev", :href => "#myCarousel"}
