--- a/app/views/static/portfolio.html.haml
+++ b/app/views/static/portfolio.html.haml
@@ -18,7 +18,7 @@
                 = link_to project[:title], project[:url], target: '_blank'
             .col-lg-7
               .blog-img
-                %img{:src => "#{project[:image]}"}
+                = image_tag "portfolio/#{project[:image]}"
             .col-lg-5
               /
                 .col-lg-5
