--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -9,9 +9,10 @@
           %p Phone: +91 - 20 - 25539995
           %p
             Email:
-            %a{:href => "javascript:;"} info@joshsoftware.com
+            %a.text-danger{:href => "javascript:;"} info@joshsoftware.com
       .col-lg-6.col-sm-6
-        = raw "<a class='twitter-timeline' href='https://twitter.com/joshsoftware' data-widget-id='252732024681545729'>Tweets by @joshsoftware</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='//platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','twitter-wjs');</script>"
+        /
+          = raw "<a class='twitter-timeline' href='https://twitter.com/joshsoftware' data-widget-id='252732024681545729'>Tweets by @joshsoftware</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='//platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','twitter-wjs');</script>"
       .col-lg-3.col-sm-3 
         %h1 stay connected
         %ul.social-link-footer.list-unstyled
