Added a dummy client logo to be displayed on home page Modified the css to display logo color on all links and buttons

--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -34,10 +34,32 @@
         %p
           We are fanatic about Test Coverage, Continuous Integration and code smell. Timelines are important but code quality is far more important. Working code is fine but we also stress test our apps for concurrency and load. 
         %p 
-          %a.text-danger{href: "http://codeclimate.com", target: '_blank'} CodeClimate,
-          %a.text-danger{href: "http://circleci.com", target: '_blank'} CircleCi,
-          %a.text-danger{href: "http://github.com", target: '_blank'} Github,
-          %a.text-danger{href: "http://pivotaltracker.com", target: '_blank'} Pivotal Tracker,
+          %a{href: "http://codeclimate.com", target: '_blank'} CodeClimate,
+          %a{href: "http://circleci.com", target: '_blank'} CircleCi,
+          %a{href: "http://github.com", target: '_blank'} Github,
+          %a{href: "http://pivotaltracker.com", target: '_blank'} Pivotal Tracker,
           and
-          %a.text-danger{href: "http://trello.com", target: '_blank'} Trello
+          %a{href: "http://trello.com", target: '_blank'} Trello
           are some of the tools we use to ensure our clients are always happy!
+.parallax1
+  .container
+    .clients
+      .container
+        .row
+          .col-lg-12.text-center
+            %ul.list-unstyled
+              %li
+                %a{:href => "#"}
+                  = image_tag 'logo3.png'
+              %li
+                %a{:href => "#"}
+                  = image_tag 'logo3.png'
+              %li
+                %a{:href => "#"}
+                  = image_tag 'logo3.png'
+              %li
+                %a{:href => "#"}
+                  = image_tag 'logo3.png'
+              %li
+                %a{:href => "#"}
+                  = image_tag 'logo3.png'
