--- a/app/views/static/testimonials.html.haml
+++ b/app/views/static/testimonials.html.haml
@@ -7,13 +7,13 @@
           .row
             .col-lg-2.col-sm-2.text-right
               .author
-                %a{:href => "#"} #{testimony[:endorser]}
+                #{testimony[:endorser]}
               %ul.list-unstyled
                 %li
-                  %a{:href => "javascript:;"}
+                  %a{:href => "#"}
                     %em #{testimony[:title]}
                 %li
-                  %a{:href => "javascript:;"}
+                  %a{:href => "#"}
                     %em #{testimony[:company]}
             .col-lg-10.col-sm-10
               %blockquote
