--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -11,6 +11,14 @@
             Email:
             %a.text-danger{:href => "javascript:;"} info@joshsoftware.com
       .col-lg-6.col-sm-6
+        %h1 latest tweet
+        .tweet-box
+          %i.icon-twitter
+          %em
+            Please follow
+            %a{:href => "javascript:;"} @joshsoftware
+            for all future updates of us!
+            %a{:href => "javascript:;"} twitter.com/joshsoftware
         /
           = raw "<a class='twitter-timeline' href='https://twitter.com/joshsoftware' data-widget-id='252732024681545729'>Tweets by @joshsoftware</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='//platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','twitter-wjs');</script>"
       .col-lg-3.col-sm-3 
